Update build.gradle and sources to Java 8